--- a/style-bg.css
+++ b/style-bg.css
@@ -111,10 +111,11 @@ html {
   width: 200%;
   height: 95%;
   background: black;
-  border-radius: 100%/100%;
   left: 50%;
   bottom: -4%;
   margin-left: -100%;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
   
 }
 #earth:before {
@@ -123,7 +124,7 @@ html {
   width: 100%;
   height: 100%;
   border-radius: 100%/100%;
-  box-shadow: inset 0px 0px 62px 20px rgba(60, 105, 138, 0.85);
+  
 }
 #earth:after {
   *zoom: 1;
