--- a/style-bg.css
+++ b/style-bg.css
@@ -109,14 +109,13 @@ html {
 #earth {
   position: absolute;
   width: 200%;
-  height: 95%;
-  background: black;
+  height: 5%;
+  background: white;
   left: 50%;
   bottom: -4%;
   margin-left: -100%;
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
-  
 }
 #earth:before {
   content: " ";
@@ -134,7 +133,7 @@ html {
   background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #000000), color-stop(50%, rgba(0, 0, 0, 0)), color-stop(100%, #000000));
   background-image: -moz-linear-gradient(left, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%);
   background-image: -webkit-linear-gradient(left, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%);
-  background-image: linear-gradient(to right, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%);
+  background-image: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 50%, #fff 100%);
   content: " ";
   position: absolute;
   width: 100%;
